[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/VT323-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Credits.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ButtonFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Credits" type="Node2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_right = 464.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Thank you for playing!

This game was made by TheBuffED in under 48 hours for the Miz Jam 1. The challenge was for everyone to use the same art asset pack.

Click on the links below or press ESC to return to the menu."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TheBuffED" type="TextureButton" parent="."]
margin_top = 184.0
margin_right = 480.0
margin_bottom = 208.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TheBuffED"]
margin_right = 480.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "- Programming, Sound, Music by TheBuffED -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kenney" type="TextureButton" parent="."]
margin_top = 224.0
margin_right = 480.0
margin_bottom = 248.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Kenney"]
margin_right = 480.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "- Art Assets by Kenney -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miziziziz" type="TextureButton" parent="."]
margin_top = 264.0
margin_right = 480.0
margin_bottom = 288.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Miziziziz"]
margin_right = 480.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "- Game Jam by Miziziziz -"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TheBuffED" to="." method="_on_TheBuffED_pressed"]
[connection signal="pressed" from="Kenney" to="." method="_on_Kenney_pressed"]
[connection signal="pressed" from="Miziziziz" to="." method="_on_Miziziziz_pressed"]
